fix get user-info, add properties to get pokemon list
